# Finacal_Adviser

./: .gitignore  main.py  pyproject.toml  requirements.txt  run_parser.py
learning/: explore.ipynb
nlp-to-strategy-engine/: README.md  backtest_results.json  main.py  pyproject.toml  requirements.txt  test_fix.py
nlp-to-strategy-engine/backtester/: __init__.py  engine.py  indicators.py
nlp-to-strategy-engine/codegen/: __init__.py  generator.py
nlp-to-strategy-engine/data/: sample_data.csv
nlp-to-strategy-engine/demo/: run_demo.py
nlp-to-strategy-engine/docs/: DSL_Design.md  DSL_Quick_Reference.md
nlp-to-strategy-engine/dsl/: __init__.py  ast_nodes.py  grammar.lark  parser.py  validator.py
nlp-to-strategy-engine/nlp_parser/: __init__.py  parser.py  schemas.py  test_passing_examples.py  utils.py
nlp-to-strategy-engine/tests/: runablefromjsontobacktester.py  test_backtest.py  test_codegen.py  test_dsl_parser.py  test_nlp_parser.py
