[project]
name = "nlp-to-strategy-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "google-generativeai>=0.8.5",
    "langchain>=1.1.3",
    "langchain-core>=1.1.3",
    "langchain-google-genai>=4.0.0",
    "pydantic>=2.12.5",
]
